
2007-07-19  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Put output scanning in correct place.

2007-07-18  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/clone-domain: Adapt for the cloning of 'findutils', and fix
	some errors.

	* registry/registry.sgml: Add a 'findutils_stable' domain.

	* registry/registry.sgml: Remove leadership from those who are
	unreachable by email.

	* registry/AUTHORS: Remove duplicate entries.

2007-07-17  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py, lib/registry.py, bin/po-register, bin/tp-robot:
	Delete the remains of the mechanisms for multiple archives.

	* lib/registry.py: PO file names do not contain the name of the
	character set any more; delete some of the mechanisms for this.

2007-07-15  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Rename 'id-utils' to 'idutils', remove
	the dead 'impost'.

2007-07-14  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/welcome.html: Mention that the TP handles only gettextized
	packages, add a hyperlink to the online gettext manual, remove some
	dead text, and add a paragraph about past and current managers.

	* registry/registry.sgml: Remove the obsolete domains 'batchelor',
	'silky', and 'sketch'.

	* bin/create-mail-aliases: Use braces to create groups of commands,
	instead of artificially chopping up long lines.

2007-07-13  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Shorten and tweak some rejection texts, and separate
	them by blank lines.

	* bin/po-register: Solve the bug where the symlink in latest/ would
	sometimes not get updated: having a maintainer's email address should
	not be a condition for this.

2007-07-12  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Shorten and clarify the texts that explain why the
	submitting translator is not allowed to do so.

2007-07-09  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/Makefile, webgen/stepinto.html.in: Remove the redirecting