@@ -3,6 +3,8 @@
 
 	* bin/tp-robot: Put output scanning in correct place.
 
+	* lib/localweb.py: Always print introductory sentence on domain page.
+
 2007-07-18  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* bin/clone-domain: Adapt for the cloning of 'findutils', and fix
